--- a/static/partials/list.html
+++ b/static/partials/list.html
@@ -2,7 +2,7 @@
     <div class="container">
 
         <div class="page-header">
-            <h1>Welcome to a tour of Go</h1>
+            <h1>Вітаємо на турі з Go</h1>
         </div>
 
         <div class="module" ng-repeat="m in toc.modules">
